--- a/Index.HTML
+++ b/Index.HTML
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armstrong 7 Esports</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,9 +22,28 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to Armstrong 7 Esports</h1>
-            <p>Your #1 BGMI esports team!</p>
-            <a href="roster.html" class="btn">Meet the Team</a>
+            <div class="hero-content">
+                <h1>Welcome to Armstrong 7 Esports</h1>
+                <p>Where gaming legends are made. Join the action today!</p>
+                <a href="roster.html" class="btn">Meet the Team</a>
+            </div>
+        </section>
+        <section class="features">
+            <div class="feature">
+                <h2>Latest Clips</h2>
+                <p>Watch the best plays and highlights from our team.</p>
+                <a href="clips.html" class="feature-link">Watch Now &raquo;</a>
+            </div>
+            <div class="feature">
+                <h2>Achievements</h2>
+                <p>Discover our journey to the top of the BGMI esports world.</p>
+                <a href="achievements.html" class="feature-link">See More &raquo;</a>
+            </div>
+            <div class="feature">
+                <h2>Join Us</h2>
+                <p>Become a part of Armstrong 7 Esports. Contact us today!</p>
+                <a href="contact.html" class="feature-link">Get In Touch &raquo;</a>
+            </div>
         </section>
     </main>
     <footer>
