--- a/clips.html
+++ b/clips.html
@@ -24,16 +24,16 @@
             <h1>Latest Clips</h1>
             <div class="clip-grid">
                 <div class="clip">
-                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-                    <p>Amazing BGMI Play!</p>
+                    <iframe src="https://www.youtube.com/embed/QHP1gFNDMxM?si=Ffu8-C4T22A1nhlh" allowfullscreen></iframe>
+                    <p>AS7xSORA || 18 Finishes Domination || Chicken 🍗 🍗 || 50k Invitationals</p>
                 </div>
                 <div class="clip">
-                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-                    <p>Insane Squad Wipe!</p>
+                    <iframe src="https://www.youtube.com/embed/JIS5IUih0Ng?si=77Bzi1epsXsvNcQr" allowfullscreen></iframe>
+                    <p>SANHOK DOMINATION || SIGNIFY || 9 Team Finishes || BGMI</p>
                 </div>
                 <div class="clip">
-                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-                    <p>Clutch Gameplay!</p>
+                    <iframe src="https://www.youtube.com/embed/XdUoMMcpB3s?si=43BAVTXiLSyBdvVN" allowfullscreen></iframe>
+                    <p>120K Tournament Chicken With Good Rotation 7 Finishes Domination</p>
                 </div>
             </div>
         </section>
