--- a/roster.html
+++ b/roster.html
@@ -24,16 +24,32 @@
             <h1>Roster Information</h1>
             <div class="roster-grid">
                 <div class="player">
-                    <h2>Player 1</h2>
-                    <p>Role: Sniper</p>
+                    <h2>AS7xAshOG</h2>
+                    <p>Role: In-Game Leader</p>
                 </div>
                 <div class="player">
-                    <h2>Player 2</h2>
-                    <p>Role: Scout</p>
+                    <h2>AS7xSoraIsLive</h2>
+                    <p>Role: Entry Fragger</p>
                 </div>
                 <div class="player">
-                    <h2>Player 3</h2>
-                    <p>Role: Support</p>
+                    <h2>AS7xSaimOG</h2>
+                    <p>Role: Assaulter</p>
+                </div>
+                <div class="player">
+                    <h2>AS7xZORO</h2>
+                    <p>Role: Assaulter</p>
+                </div>
+                <div class="player">
+                    <h2>AS7xDevManus</h2>
+                    <p>Role: Filter / Assaulter</p>
+                </div>
+                <div class="player">
+                    <h2>AS7xSpray</h2>
+                    <p>Role: Assaulter</p>
+                </div>
+                <div class="player">
+                    <h2>AS7xISHITA</h2>
+                    <p>Role: Assaulter</p>
                 </div>
             </div>
         </section>
