--- a/roster.html
+++ b/roster.html
@@ -23,31 +23,38 @@
         <section class="roster">
             <h1>Roster Information</h1>
             <div class="roster-grid">
-                <div class="player">
-                    <h2>AS7xAshOG</h2>
+                <div class="player-card">
+                    <img src="images/player1.jpg" alt="AS7xSarangJod" class="player-image">
+                    <h2>AS7xSarangJod</h2>
                     <p>Role: In-Game Leader</p>
                 </div>
-                <div class="player">
+                <div class="player-card">
+                    <img src="images/player2.jpg" alt="AS7xSoraIsLive" class="player-image">
                     <h2>AS7xSoraIsLive</h2>
                     <p>Role: Entry Fragger</p>
                 </div>
-                <div class="player">
+                <div class="player-card">
+                    <img src="images/player3.jpg" alt="AS7xSaimOG" class="player-image">
                     <h2>AS7xSaimOG</h2>
                     <p>Role: Assaulter</p>
                 </div>
-                <div class="player">
+                <div class="player-card">
+                    <img src="images/player4.jpg" alt="AS7xZORO" class="player-image">
                     <h2>AS7xZORO</h2>
                     <p>Role: Assaulter</p>
                 </div>
-                <div class="player">
+                <div class="player-card">
+                    <img src="images/player5.jpg" alt="AS7xDevManus" class="player-image">
                     <h2>AS7xDevManus</h2>
                     <p>Role: Filter / Assaulter</p>
                 </div>
-                <div class="player">
+                <div class="player-card">
+                    <img src="images/player6.jpg" alt="AS7xSpray" class="player-image">
                     <h2>AS7xSpray</h2>
                     <p>Role: Assaulter</p>
                 </div>
-                <div class="player">
+                <div class="player-card">
+                    <img src="images/player7.jpg" alt="AS7xISHITA" class="player-image">
                     <h2>AS7xISHITA</h2>
                     <p>Role: Assaulter</p>
                 </div>
