--- a/roster.html
+++ b/roster.html
@@ -24,7 +24,7 @@
             <h1>Roster Information</h1>
             <div class="roster-grid">
                 <div class="player-card">
-                    <img src="images/player1.jpg" alt="AS7xSarangJod" class="player-image">
+                    <img src="Images/AS7xSARANG.png" alt="AS7xSarangJod" class="player-image">
                     <h2>AS7xSarangJod</h2>
                     <p>Role: In-Game Leader</p>
                 </div>
@@ -39,8 +39,8 @@
                     <p>Role: Assaulter</p>
                 </div>
                 <div class="player-card">
-                    <img src="images/player4.jpg" alt="AS7xZORO" class="player-image">
-                    <h2>AS7xZORO</h2>
+                    <img src="Images/AS7xABHI.jpg" alt="AS7xZORO" class="player-image">
+                    <h2>AS7xABHI</h2>
                     <p>Role: Assaulter</p>
                 </div>
                 <div class="player-card">
