--- a/roster.html
+++ b/roster.html
@@ -44,7 +44,7 @@
                     <p>Role: Assaulter</p>
                 </div>
                 <div class="player-card">
-                    <img src="images/player5.jpg" alt="AS7xDevManus" class="player-image">
+                    <img src="Images/AS7xDEVMANUS.jpg" alt="AS7xDevManus" class="player-image">
                     <h2>AS7xDevManus</h2>
                     <p>Role: Filter / Assaulter</p>
                 </div>
