--- a/Index.HTML
+++ b/Index.HTML
@@ -6,6 +6,7 @@
     <title>Armstrong 7 Esports</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://atharvachalse404.github.io/ARMSTRONG7ESPORTS/styles/main.css">
 </head>
 <body>
     <header>
