--- a/achievements.html
+++ b/achievements.html
@@ -24,16 +24,24 @@
             <h1>Achievements</h1>
             <div class="achievement-grid">
                 <div class="achievement">
-                    <h2>Tournament Win</h2>
-                    <p>BGMI Masters League 2024 - 1st Place</p>
+                    <h2>350K Semi Finalist</h2>
+                    <p>Night Owl Esports</p>
                 </div>
                 <div class="achievement">
-                    <h2>Trophy Secured</h2>
-                    <p>BGMI Winter Cup 2023 - Runner Up</p>
+                    <h2>200K Round 3 Team</h2>
+                    <p>Angry Panda Esports</p>
                 </div>
                 <div class="achievement">
-                    <h2>Clutch Awards</h2>
-                    <p>Best Teamfight 2024</p>
+                    <h2>Semi Finalist</h2>
+                    <p>CODEX ESPORTS 400K Sponsorship Battle</p>
+                </div>
+                <div class="achievement">
+                    <h2>50K Table Toppers</h2>
+                    <p>Invitational Series by Signify Esports (Gamers Glory Challenge Tourney)</p>
+                </div>
+                <div class="achievement">
+                    <h2>Tier 2 Team</h2>
+                    <p>Trident Esports</p>
                 </div>
             </div>
         </section>
