--- a/roster.html
+++ b/roster.html
@@ -49,7 +49,7 @@
                     <p>Role: Filter / Assaulter</p>
                 </div>
                 <div class="player-card">
-                    <img src="images/player6.jpg" alt="AS7xSpray" class="player-image">
+                    <img src="Images/AS7xSpray.jpg" alt="AS7xSpray" class="player-image">
                     <h2>AS7xSpray</h2>
                     <p>Role: Assaulter</p>
                 </div>
