--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="Styles/main.css">
 </head>
 <body>
+     <!-- Loader HTML -->
+     <div class="loader">
+        <div class="newtons-cradle">
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+        </div>
+    </div>
     <header>
         <nav class="navbar">
             <div class="logo">Armstrong 7 Esports</div>
