--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Armstrong 7 Esports</title>
     <link rel="stylesheet" href="Styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="Images/logo.png" type="image/png"> <!-- Favicon link -->
 </head>
 <body>
      <!-- Loader HTML -->
@@ -20,7 +21,10 @@
     </div>
     <header>
         <nav class="navbar">
-            <div class="logo">Armstrong 7 Esports</div>
+            <div class="logo">
+                <img src="Images/AS7 ESPORTS LOGO.jpg" alt="Armstrong 7 Esports Logo" style="height: 50px;"> <!-- Logo image -->
+                Armstrong 7 Esports
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="clips.html">Latest Clips</a></li>
