--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Armstrong 7 Esports</title>
     <link rel="stylesheet" href="Styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="Images/logo.png" type="image/png"> <!-- Favicon link -->
+    <link rel="icon" href="Images/AS7 ESPORTS LOGO.jpg" type="image/png"> <!-- Favicon link -->
 </head>
 <body>
      <!-- Loader HTML -->
