--- a/clips.html
+++ b/clips.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latest Clips - Armstrong 7 Esports</title>
     <link rel="stylesheet" href="Styles/main.css">
+    <link rel="icon" href="Images/AS7 ESPORTS LOGO.jpg" type="image/png"> <!-- Favicon link -->
+
 </head>
 <body>
      <!-- Loader HTML -->
