--- a/roster.html
+++ b/roster.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roster Information - Armstrong 7 Esports</title>
     <link rel="stylesheet" href="Styles/main.css">
+    <link rel="icon" href="Images/AS7 ESPORTS LOGO.jpg" type="image/png"> <!-- Favicon link -->
+
     <style>
         /* General Styles */
         body {
