--- a/roster.html
+++ b/roster.html
@@ -158,7 +158,7 @@
                     <p>Role: Entry Fragger</p>
                 </div>
                 <div class="player-card">
-                    <img src="images/player3.jpg" alt="AS7xSaimOG" class="player-image">
+                    <img src="Images/AS7xSAIMOG.jpg" alt="AS7xSaimOG" class="player-image">
                     <h2>AS7xSaimOG</h2>
                     <p>Role: Assaulter</p>
                 </div>
