--- a/roster.html
+++ b/roster.html
@@ -157,6 +157,12 @@
                     <h2>AS7xSaimOG</h2>
                     <p>Role: Assaulter</p>
                 </div>
+                <div class="player-card">
+                    <img src="images/player2.jpg" alt="AS7xSoraIsLive" class="player-image">
+                    <h2>AS7xSoraIsLive</h2>
+                    <p>Role: Entry Fragger</p>
+                </div>
+               
                
             </div>
         </section>
