--- a/roster.html
+++ b/roster.html
@@ -19,7 +19,7 @@
         body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2F4kwallpapers.com%2Fgames%2Fplayerunknowns-battlegrounds-pubg-bgmi-2022-games-5k-7843.html&psig=AOvVaw2ZFAIEHvXF311v1rKemKN0&ust=1735334557197000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKCN7Y-vxooDFQAAAAAdAAAAABAE'); /* Replace with your image path */
+    background-image: url('/Images/BGMI\ BACKGROUND.jpg'); /* Replace with your image path */
     background-size: cover; /* Cover the entire viewport */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
@@ -105,8 +105,8 @@
         }
     </style>
 </head>
-<body>
-    <!-- Loader HTML -->
+<body style="background-image: url('Images/BGMI BACKGROUND.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <!-- Loader HTML -->    <!-- Loader HTML -->
     <div class="loader">
         <div class="newtons-cradle">
             <div class="newtons-cradle__dot"></div>
