--- a/index.html
+++ b/index.html
@@ -34,30 +34,13 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h1>Welcome to Armstrong 7 Esports</h1>
-                <p>Where gaming legends are made. Join the action today!</p>
-                <a href="roster.html" class="btn">Meet the Team</a>
-            </div>
-        </section>
-        <section class="features">
-            <div class="feature">
-                <h2>Latest Clips</h2>
-                <p>Watch the best plays and highlights from our team.</p>
-                <a href="clips.html" class="feature-link">Watch Now &raquo;</a>
-            </div>
-            <div class="feature">
-                <h2>Achievements</h2>
-                <p>Discover our journey to the top of the BGMI esports world.</p>
-                <a href="achievements.html" class="feature-link">See More &raquo;</a>
-            </div>
-            <div class="feature">
-                <h2>Join Us</h2>
-                <p>Become a part of Armstrong 7 Esports. Contact us today!</p>
-                <a href="contact.html" class="feature-link">Get In Touch &raquo;</a>
-            </div>
+     <!-- Blog Section -->
+     <main>
+        <section class="blog" style="text-align: center; margin: 50px 0;">
+            <h2>LATEST UPDATES</h2>
+            <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem;">
+                Team ARMSTRONG 7 IS NOW OFFICIALLY READY FOR BGIS 
+            </p>
         </section>
     </main>
     <footer>
