--- a/achievements.html
+++ b/achievements.html
@@ -55,6 +55,22 @@
                     <h2>Tier 2 Team</h2>
                     <p>Trident Esports</p>
                 </div>
+                <div class="achievement">
+                    <h2>200k ORG PHASE</h2>
+                    <p>Xillian ESPORTS</p>
+                </div>
+                <div class="achievement">
+                    <h2>Tier 2 Team</h2>
+                    <p>Trident Esports</p>
+                </div>
+                <div class="achievement">
+                    <h2>Tier 1 Team</h2>
+                    <p>The Grind</p>
+                </div>
+                <div class="achievement">
+                    <h2>Tier 2 Team</h2>
+                    <p>Trident Esports</p>
+                </div>
             </div>
         </section>
     </main>
