--- a/achievements.html
+++ b/achievements.html
@@ -6,7 +6,6 @@
     <title>Achievements - Armstrong 7 Esports</title>
     <link rel="stylesheet" href="Styles/main.css">
     <link rel="icon" href="Images/AS7 ESPORTS LOGO.jpg" type="image/png"> <!-- Favicon link -->
-
 </head>
 <body>
      <!-- Loader HTML -->
@@ -31,7 +30,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main style="background-image: url(/Images/Achivements\ background.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <section class="achievements">
             <h1>Achievements</h1>
             <div class="achievement-grid">
@@ -67,7 +66,6 @@
                     <h2>Tier 1 Team</h2>
                     <p>The Grind</p>
                 </div>
-                
             </div>
         </section>
     </main>
