--- a/achievements.html
+++ b/achievements.html
@@ -32,42 +32,43 @@
     </header>
     <main style="background-image: url(/Images/Achivements\ background.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <section class="achievements">
-            <h1>Achievements</h1>
-            <div class="achievement-grid">
-                <div class="achievement">
-                    <h2>350K Semi Finalist</h2>
-                    <p>Night Owl Esports</p>
-                </div>
-                <div class="achievement">
-                    <h2>200K Round 3 Team</h2>
-                    <p>Angry Panda Esports</p>
-                </div>
-                <div class="achievement">
-                    <h2>Semi Finalist</h2>
-                    <p>CODEX ESPORTS 400K Sponsorship Battle</p>
-                </div>
-                <div class="achievement">
-                    <h2>50K Table Toppers</h2>
-                    <p>Invitational Series by Signify Esports (Gamers Glory Challenge Tourney)</p>
-                </div>
-                <div class="achievement">
-                    <h2>Tier 2 Team</h2>
-                    <p>Trident Esports</p>
-                </div>
-                <div class="achievement">
-                    <h2>200k ORG PHASE</h2>
-                    <p>Xillian ESPORTS</p>
-                </div>
-                <div class="achievement">
-                    <h2>Tier 2 Team</h2>
-                    <p>Trident Esports</p>
-                </div>
-                <div class="achievement">
-                    <h2>Tier 1 Team</h2>
-                    <p>The Grind</p>
-                </div>
-            </div>
-        </section>
+    <h1>Achievements</h1>
+    <div class="roster-grid"> <!-- Reuse the roster-grid class -->
+        <div class="player-card"> <!-- Reuse the player-card class -->
+            <h2>350K Semi Finalist</h2>
+            <p>Night Owl Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>200K Round 3 Team</h2>
+            <p>Angry Panda Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>Semi Finalist</h2>
+            <p>CODEX ESPORTS 400K Sponsorship Battle</p>
+        </div>
+        <div class="player-card">
+            <h2>50K Table Toppers</h2>
+            <p>Invitational Series by Signify Esports (Gamers Glory Challenge Tourney)</p>
+        </div>
+        <div class="player-card">
+            <h2>Tier 2 Team</h2>
+            <p>Trident Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>200k ORG PHASE</h2>
+            <p>Xillian ESPORTS</p>
+        </div>
+        <div class="player-card">
+            <h2>Tier 2 Team</h2>
+            <p>Trident Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>Tier 1 Team</h2>
+            <p>The Grind</p>
+        </div>
+    </div>
+</section>
+
     </main>
     <footer>
         <p>&copy; 2024 Armstrong 7 Esports. All rights reserved.</p>
