--- a/achievements.html
+++ b/achievements.html
@@ -59,8 +59,28 @@
             <p>Xillian ESPORTS</p>
         </div>
         <div class="player-card">
+            <h2>10k Winners</h2>
+            <p>YXT Esports</p>
+        </div>
+        <div class="player-card">
             <h2>Tier 1 Team</h2>
             <p>The Grind</p>
+        </div>
+        <div class="player-card">
+            <h2>50K ORG PHASE</h2>
+            <p>NightOwl Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>200k Quater Finalists</h2>
+            <p>Agra Esports BGMI CHAMPIONS LEAGUE</p>
+        </div>
+        <div class="player-card">
+            <h2>50k Grand Finalists</h2>
+            <p>Nodwin PVR CUP</p>
+        </div>
+        <div class="player-card">
+            <h2>Round 2</h2>
+            <p>TMG ESPORTS SPONSORSHIP BATTLE</p>
         </div>
     </div>
 </section>
