--- a/achievements.html
+++ b/achievements.html
@@ -82,6 +82,10 @@
             <h2>Round 2</h2>
             <p>TMG ESPORTS SPONSORSHIP BATTLE</p>
         </div>
+        <div class="player-card">
+            <h2>30K Quater Finalist</h2>
+            <p>TPR ESPORTS BMUC</p>
+        </div>
     </div>
 </section>
 
