--- a/achievements.html
+++ b/achievements.html
@@ -86,6 +86,10 @@
             <h2>30K Quater Finalist</h2>
             <p>TPR ESPORTS BMUC</p>
         </div>
+        <div class="player-card">
+            <h2>120k Round 3</h2>
+            <p>SKYLANCE ESPORTS</p>
+        </div>
     </div>
 </section>
 
