--- a/achievements.html
+++ b/achievements.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
     </header>
-    <main style="background-image: url(/Images/Achivements\ background.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <main >
         <section class="achievements">
     <h1>Achievements</h1>
     <div class="roster-grid"> <!-- Reuse the roster-grid class -->
