--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
             </ul>
         </nav>
     </header>
-     <!-- Blog Section -->
-     <main>
+    
+    <!-- Blog Section -->
+    <main>
+        <section style="text-align: center; margin: 20px 0;">
+            <h1>Our Logo</h1>
+            <img src="Images/AS7 ESPORTS LOGO.jpg" alt="Armstrong 7 Esports Logo" style="height: 350px; margin: 0 auto; display: block;">
+        </section>
         <section class="blog" style="text-align: center; margin: 50px 0;">
             <h2>LATEST UPDATES</h2>
             <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem;">
@@ -43,6 +48,7 @@
             </p>
         </section>
     </main>
+    
     <footer>
         <p>&copy; 2024 Armstrong 7 Esports. All rights reserved.</p>
     </footer>
