--- a/achievements.html
+++ b/achievements.html
@@ -51,6 +51,10 @@
             <p>Invitational Series by Signify Esports (Gamers Glory Challenge Tourney)</p>
         </div>
         <div class="player-card">
+            <h2>50K Semi Finalist ( INVITED TEAM ) </h2>
+            <p>Signify Esports</p>
+        </div>
+        <div class="player-card">
             <h2>Tier 2 Team</h2>
             <p>Trident Esports</p>
         </div>
