--- a/clips.html
+++ b/clips.html
@@ -47,6 +47,10 @@
                     <iframe src="https://www.youtube.com/embed/XdUoMMcpB3s?si=43BAVTXiLSyBdvVN" allowfullscreen></iframe>
                     <p>120K Tournament Chicken With Good Rotation 7 Finishes Domination</p>
                 </div>
+                <div class="clip">
+                    <iframe src="https://www.youtube.com/embed/wb1v8XB8ep4?si=sGrrqKCisdY6dBdN" allowfullscreen></iframe>
+                    <p>AS7xDEVMANUS HIGHLIGHTS</p>
+                </div>
             </div>
         </section>
     </main>
