--- a/achievements.html
+++ b/achievements.html
@@ -94,6 +94,10 @@
             <h2>120k Round 3</h2>
             <p>SKYLANCE ESPORTS</p>
         </div>
+        <div class="player-card">
+            <h2>10K SEMI-FINALISTS</h2>
+            <p>ARISTOS CUP BY QA ESPORTS</p>
+        </div>
     </div>
 </section>
 
