--- a/roster.html
+++ b/roster.html
@@ -121,7 +121,7 @@
         </nav>
     </header>
     <main>
-        <section class="roster">
+        <section class="roster" style="color: #0a0a0a;">
             <h1>Roster Information</h1>
             <div class="roster-grid">
                 <div class="player-card">
