--- a/achievements.html
+++ b/achievements.html
@@ -95,7 +95,7 @@
             <p>SKYLANCE ESPORTS</p>
         </div>
         <div class="player-card">
-            <h2>10K SEMI-FINALISTS</h2>
+            <h2>10K FINALISTS ( On-Going)</h2>
             <p>ARISTOS CUP BY QA ESPORTS</p>
         </div>
     </div>
