--- a/roster.html
+++ b/roster.html
@@ -128,31 +128,42 @@
                     <img src="Images/AS7xSARANG.png" alt="AS7xSarangJod" class="player-image">
                     <h2>AS7xSarangJod</h2>
                     <p>Role: In-Game Leader</p>
+                    <p>Age : 17</p>
+
                 </div>
                 <div class="player-card">
                     <img src="Images/AS7xSpray.jpg" alt="AS7xSpray" class="player-image">
                     <h2>AS7xSpray</h2>
                     <p>Role: Assaulter</p>
+                    <p>Age : 21</p>
+
                 </div>
                 <div class="player-card">
                     <img src="Images/AS7xABHI.jpg" alt="AS7 xZORO" class="player-image">
                     <h2>AS7xABHI</h2>
                     <p>Role: Assaulter</p>
+                    <p>Age : 22</p>
                 </div>
                 <div class="player-card">
                     <img src="Images/AS7xDEVMANUS.jpg" alt="AS7xDevManus" class="player-image">
                     <h2>AS7xDevManus</h2>
                     <p>Role: Filter / Assaulter</p>
+                    <p>Age : 22</p>
+
                 </div>
                 <div class="player-card">
                     <img src="Images/AS7xSAIMOG.jpg" alt="AS7xSaimOG" class="player-image">
                     <h2>AS7xSaimOG</h2>
                     <p>Role: Assaulter</p>
+                    <p>Age : 17</p>
+
                 </div>
                 <div class="player-card">
                     <img src="images/player2.jpg" alt="AS7xSoraIsLive" class="player-image">
                     <h2>AS7xSoraIsLive</h2>
                     <p>Role: Entry Fragger</p>
+                    <p>Age : 15</p>
+
                 </div>
                
                
