--- a/roster.html
+++ b/roster.html
@@ -159,7 +159,7 @@
 
                 </div>
                 <div class="player-card">
-                    <img src="images/player2.jpg" alt="AS7xSoraIsLive" class="player-image">
+                    <img src="Images/AS7xSora.jpg" alt="AS7xSoraIsLive" class="player-image">
                     <h2>AS7xSoraIsLive</h2>
                     <p>Role: Entry Fragger</p>
                     <p>Age : 15</p>
