--- a/achievements.html
+++ b/achievements.html
@@ -76,7 +76,7 @@
         </div>
         <div class="player-card">
             <h2>200k Quater Finalists</h2>
-            <p>Agra Esports BGMI CHAMPIONS LEAGUE</p>
+            <p>Agra Esports </p>
         </div>
         <div class="player-card">
             <h2>50k Grand Finalists</h2>
