--- a/achievements.html
+++ b/achievements.html
@@ -97,6 +97,10 @@
             <h2>10K FINALISTS</h2>
             <p>ARISTOS CUP BY QA ESPORTS</p>
         </div>
+        <div class="player-card">
+            <h2>Tier 2 Foothil Scrims</h2>
+            <p>Signify Esports</p>
+        </div>
     </div>
 </section>
 
