--- a/achievements.html
+++ b/achievements.html
@@ -34,6 +34,8 @@
     <h1>Achievements</h1>
     <div class="roster-grid"> <!-- Reuse the roster-grid class -->
         <div class="player-card"> <!-- Reuse the player-card class -->
+
+        <div class="player-card">
             <h2>200K Round 3 Team</h2>
             <p>Angry Panda Esports</p>
         </div>
