--- a/achievements.html
+++ b/achievements.html
@@ -34,7 +34,9 @@
     <h1>Achievements</h1>
     <div class="roster-grid"> <!-- Reuse the roster-grid class -->
         <div class="player-card"> <!-- Reuse the player-card class -->
-
+            <h2>350K Semi Finalist</h2>
+            <p>Night Owl Esports</p>
+        </div>
         <div class="player-card">
             <h2>200K Round 3 Team</h2>
             <p>Angry Panda Esports</p>
@@ -55,6 +57,7 @@
             <h2>Tier 2 Team</h2>
             <p>Trident Esports</p>
         </div>
+
         <div class="player-card">
             <h2>10k Winners</h2>
             <p>YXT Esports</p>
