--- a/achievements.html
+++ b/achievements.html
@@ -57,7 +57,10 @@
             <h2>Tier 2 Team</h2>
             <p>Trident Esports</p>
         </div>
-
+        <div class="player-card">
+            <h2>200k ORG PHASE</h2>
+            <p>Xillian ESPORTS</p>
+        </div>
         <div class="player-card">
             <h2>10k Winners</h2>
             <p>YXT Esports</p>
@@ -69,6 +72,11 @@
         <div class="player-card">
             <h2>50K ORG PHASE</h2>
             <p>NightOwl Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>200k Quater Finalists</h2>
+            <p>Agra Esports </p>
+        </div>
         <div class="player-card">
             <h2>50k Grand Finalists</h2>
             <p>Nodwin PVR CUP</p>
