--- a/roster.html
+++ b/roster.html
@@ -110,7 +110,8 @@
     </div>
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">Armstrong 7 Esports</a>
+            <img src="Images/AS7 ESPORTS LOGO.jpg" alt="Armstrong 7 Esports Logo" style="height: 50px;"> <!-- Logo image -->
+            Armstrong 7 Esports
         </div>
         <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
