--- a/clips.html
+++ b/clips.html
@@ -21,7 +21,9 @@
     </div>
     <header>
         <nav class="navbar">
-            <div class="logo">Armstrong 7 Esports</div>
+            <div class="logo">
+                <img src="Images/AS7 ESPORTS LOGO.jpg" alt="Armstrong 7 Esports Logo" style="height: 50px;">    
+                Armstrong 7 Esports</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="clips.html">Latest Clips</a></li>
