--- a/roster.html
+++ b/roster.html
@@ -131,7 +131,7 @@
                     <h2>AS7xSarangJod</h2>
                     <p>Role: In-Game Leader</p>
                     <p>Age : 17</p> -->
-                </div>
+                <!-- </div> -->
                 <div class="player-card">
                     <img src="Images/AS7xSpray.jpg" alt="AS7xSpray" class="player-image">
                     <h2>AS7xSpray</h2>
