--- a/roster.html
+++ b/roster.html
@@ -135,7 +135,7 @@
                 <div class="player-card">
                     <img src="Images/AS7xABHI.jpg" alt="AS7 xZORO" class="player-image">
                     <h2>AS7xABHI</h2>
-                    <p>Role: IGl / Assaulter</p>
+                    <p>Role: IGL / Assaulter</p>
                     <p>Age : 22</p>
                 </div>
 
